--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "node-template",
-  "description": "node-template",
-  "version": "3.0.0",
-  "author": "Jiri Smolik <jiri.smolik@ackee.cz>",
+  "name": "ackee-backend-task-solution",
+  "description": "ackee-backend-task-solution",
+  "version": "1.0.0-DEV",
+  "author": "Roman Filatov <rvfchdev@gmail.com>",
   "contributors": [
-    "Jaroslav Šmolík <grissius@gmail.com>"
+    "Jaroslav Šmolík <grissius@gmail.com>",
+    "Roman Filatov <rvfchdev@gmail.com>"
   ],
   "engines": {
-    "node": "^14.17.3"
+    "node": "^18.16.0"
   },
   "scripts": {
     "build": "tsc",
     "build:docs": "openapi-generator-cli generate -i docs/api/openapi.yaml -g openapi -o docs/api/generated && openapi-typescript docs/api/openapi.yaml --output src/openapi/api.ts",
     "start": "node -r source-map-support/register dist/index.js",
-    "start-lr": "tsc-watch --onSuccess \"npm run start\"",
+    "start-lr": "tsc-watch --onSuccess \"npm run start\" | npx pino-pretty",
     "test": "jest --colors --detectOpenHandles --forceExit",
     "test-lr": "npm run test -- --watch",
     "cover": "npm run test -- --collectCoverage",
@@ -37,39 +38,43 @@
     "usePathForSuiteName": "true"
   },
   "dependencies": {
-    "@ackee/styleguide-backend-config": "^0.1.2",
-    "configuru": "^0.4.0",
-    "cosmas": "^3.0.7",
+    "@ackee/styleguide-backend-config": "^0.3.13",
+    "configuru": "^0.6.2",
+    "cosmas": "^3.3.4",
+    "knex": "^2.5.1",
     "lodash": "^4.17.21",
-    "node-healthz": "^1.0.1",
+    "node-healthz": "^1.0.2",
     "npm-run-series": "^1.0.1",
-    "source-map-support": "^0.5.19",
-    "unicore": "^0.4.0"
+    "pino-http": "^8.4.0",
+    "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6",
+    "unicore": "^0.6.1"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.3.10",
-    "@types/express": "^4.17.6",
-    "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.153",
-    "@types/node": "^14.17.12",
+    "@openapitools/openapi-generator-cli": "^2.7.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
+    "@types/lodash": "^4.14.197",
+    "@types/node": "^20.5.4",
     "@types/supertest-as-promised": "^2.0.38",
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
+    "concurrently": "^8.2.1",
+    "cross-env": "^7.0.3",
     "eclint": "^2.8.1",
-    "husky": "^4.2.5",
-    "jest": "^27.0.6",
-    "jest-chain": "^1.1.5",
-    "jest-extended": "^0.11.5",
-    "jest-junit": "^10.0.0",
-    "lint-staged": "^10.2.6",
-    "npm-check": "^5.9.2",
-    "openapi-typescript": "^4.0.2",
-    "prettier": "^2.0.5",
-    "prettier-config-ackee": "0.0.13",
-    "supertest": "^4.0.2",
+    "husky": "^8.0.3",
+    "jest": "^29.6.4",
+    "jest-chain": "^1.1.6",
+    "jest-extended": "^4.0.1",
+    "jest-junit": "^16.0.0",
+    "lint-staged": "^14.0.1",
+    "npm-check": "^6.0.1",
+    "openapi-typescript": "^6.5.3",
+    "pino-pretty": "^10.2.0",
+    "prettier": "^3.0.2",
+    "prettier-config-ackee": "0.0.16",
+    "supertest": "^6.3.3",
     "supertest-as-promised": "^4.0.2",
-    "ts-jest": "^27.0.5",
-    "tsc-watch": "^4.2.8",
-    "typescript": "^4.4.2"
+    "ts-jest": "^29.1.1",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.1.6"
   }
 }
