--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-healthz": "^1.0.2",
     "npm-run-series": "^1.0.1",
     "pino-http": "^8.4.0",
+    "piscina": "^4.1.0",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.6",
     "unicore": "^0.6.1",
@@ -55,8 +56,10 @@
     "@openapitools/openapi-generator-cli": "^2.7.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.4",
+    "@types/sqlite3": "^3.1.8",
     "@types/supertest-as-promised": "^2.0.38",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
@@ -75,6 +78,7 @@
     "supertest": "^6.3.3",
     "supertest-as-promised": "^4.0.2",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.1.6"
   }
