--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ackee-backend-task-solution",
   "description": "ackee-backend-task-solution",
-  "version": "1.2.0-DEV",
+  "version": "1.2.0",
   "author": "Roman Filatov <rvfchdev@gmail.com>",
   "contributors": [
     "Jaroslav Šmolík <grissius@gmail.com>",
